feat: enhance data management and product generation pipeline
- Refactor data_manager.ts to derive store name and build category index.
- Update saveData function to include categories and last synced timestamp.
- Modify facebook_page_reader.ts to support async post fetching with improved mock data.
- Revamp index.ts to handle async operations and improved error handling in the transformation endpoint.
- Update product_generator.ts to include price extraction and title generation logic.
- Enhance db package with async read/write operations and schema definitions.
- Introduce products-api to serve catalog data with endpoints for products, categories, and store metadata.
- Add client-side Storefront component for displaying products and syncing with Facebook pages.
- Implement type definitions for shared data structures across applications.

--- a/apps/mcp/tsconfig.json
+++ b/apps/mcp/tsconfig.json
@@ -4,6 +4,10 @@
     "module": "commonjs",
     "outDir": "dist",
     "rootDir": "src",
+    "baseUrl": ".",
+    "paths": {
+      "db": ["../../packages/db/src"]
+    },
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
